<resources>
    <string name="app_name">叮咛科技</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">首页</string>
    <string name="ding_ning">叮咛</string>
    <string name="reply_voice">回复语音</string>
    <string name="reply_video">回复视频</string>
    <string name="send_video">发送视频</string>
    <string name="send_voice">发送语音</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">加载下一页</string>
    <string name="back">返回</string>
    <string name="update_class_info">修改班级信息</string>
    <string name="select_send_object">请选择发送对象</string>
    <string name="all_select_cancel">全选/全部取消</string>
    <string name="record_voice">录制语音</string>
    <string name="record_video">录制视频</string>
    <string name="record_voice_tip">注意：最长录制30秒语音</string>
    <string name="recording">正在录制,请稍候</string>
    <string name="over_record_and_send">录制结束并发送</string>
    <string name="cancel">取消</string>

    <string name="end_voice">录制结束并发送</string>
    <string name="network_is_unable">网络连接不可用</string>
    <string name="time_tip">30秒</string>
    <string name="start_voice">开始录制</string>
    <string name="record_video_tip">注意：最长录制30秒视频</string>
    <string name="read">已读</string>
    <string name="unread">未读</string>
    <string name="please_read_card">请刷电子校徽卡</string>
    <string name="record_tip">录制提醒</string>
    <string name="record_is_send">录制结束，是否发送</string>
    <string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="null_class_id_tip">班级ID不能为空,请重新输入</string>
    <string name="null_class_name_tip">班级名称不能为空,请重新输入</string>
    <string name="null_class_admin_password_tip">管理员密码不能为空,请重新输入</string>
    <string name="admin_password_error">管理员密码错误，请重新输入</string>
    <string name="update_admin_password_success">班级信息修改成功</string>
    <string name="please_entry_class">请设置班级信息</string>
    <string name="set_class_name">请设置班级ID</string>
    <string name="set_class_id">请设置班级名称</string>
    <string name="set_admin_password">请设置管理员密码</string>
    <string name="wzzc_school">乌镇植材小学</string>
    <string name="uploading">正在上传</string>
    <string name="file_tip">文件提示</string>
    <string name="version_tip">版本更新提示</string>
    <string name="upload_fail">上传失败</string>
    <string name="upload_success">上传成功</string>
    <string name="try_once">重新上传</string>
    <string name="cancel_upload">取消上传</string>
    <string name="dialog_title">温馨提示</string>
    <string name="get_msg_fail">获取信息失败，请重试(%s)</string>
    <string name="no_carid">暂无该卡号信息</string>
    <string name="class_no_carid">该班级暂无此卡号信息</string>
    <string name="no_app">未找到匹配的应用</string>
</resources>
