<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Layout_padding_same"
    android:orientation="vertical"
    tools:context="com.dingning.cardzs.SelectObjectFragment">


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_send_object"
        style="@style/font_low"
        android:id="@+id/textView" />

    <android.support.v7.widget.RecyclerView
        android:id="@id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/low"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/low"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@id/bt_select_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/button_padding_low"
            android:background="@drawable/corner_blue"
            android:text="@string/all_select_cancel"/>

        <Button
            android:id="@id/bt_record_voice"
            style="@style/button_padding_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/low"
            android:text="@string/record_video"/>

        <Button
            android:id="@id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/low"
            android:background="@drawable/corner_blue"
            android:text="@string/back"
            style="@style/button_padding_low" />


    </LinearLayout>

</LinearLayout>
