<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Layout_padding_difference"
    android:orientation="horizontal"
    tools:context="com.dingning.cardzs.MessageListFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@id/iv_avatar"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@id/tv_name"
            style="@style/font_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/low"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@id/rv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/low"
            android:layout_gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_page"
                style="@style/font_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/low"
                android:orientation="horizontal">

                <Button
                    android:id="@id/bt_send_video"
                    style="@style/button_padding_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner_pink"
                    android:text="@string/send_video" />

                <Button
                    android:id="@id/bt_send_voice"
                    style="@style/button_padding_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/corner_green"
                    android:text="@string/send_voice" />

                <Button
                    android:id="@id/bt_next_page"
                    style="@style/button_padding_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/low"
                    android:background="@drawable/corner_blue"
                    android:text="@string/next_page" />

                <Button
                    android:id="@id/bt_back"
                    style="@style/button_padding_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/low"
                    android:background="@drawable/corner_blue"
                    android:text="@string/back" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>